@startuml
'https://plantuml.com/class-diagram

class App
class fileMethods
class frequencyMethods

App <--- fileMethods
App <--- frequencyMethods

class App{
+main(args : String []) : void
}

class fileMethods{
+readFile(inputFile : File, readHelper : Scanner) : ArrayList<String>
}

class frequencyMethods{
+findFrequency(inputFile : ArrayList<String>) : Map<String, Integer>
+printFrequencies(outputMap : Map<String, Integer>) : void
}

@enduml